# Vocabulearn

./: .gitignore  CMakeLists.txt  README.md  dictionary.json  main.cpp
Controller/: Controller.cpp  Controller.h
Dictionary/: Dictionary.cpp  Dictionary.h
Evaluation/: Evaluation.h
Testing/: Testing.cpp  Testing.h
lib/Key/: Key.cpp  Key.h  KeyPlus.h
